tests/pass/multiple_tests_output_truncated/identity.nim
import strutils

func identity*(n: int): int =
  debugEcho "abcdeghijklmnopqrstuvwxyz".repeat(20)
  n
