tests/error/compiletime_error_iteration_limit_recursion/identity.nim
func identity*(n: int): int =
  identity(n)

static:
  echo identity(0)
